[package]
name = "graphql-server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "5.0.7"
async-graphql-axum = "5.0.7"
axum = { version = "0.6.0", features = ["headers"] }
tokio = { version = "1", features = ["full"] }
database-manager = { path = "../database-manager"}